[FT:#5828] Handle panel collapse/expand buttons with css instead of JE and react refs.

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Editor/Editor.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Editor/Editor.css
@@ -38,3 +38,11 @@
 .invalidConfiguration{
   font-size: 1.2em;
 }
+.verticalBarButton{
+  margin-top: 2px;
+}
+.barButton{
+  position: absolute;
+  top: 0px;
+  right: -23px;
+}
