--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Explorer/Explorer.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Explorer/Explorer.css
@@ -14,7 +14,6 @@
   overflow: auto;
 }
 
-
 .buttonGroup {
   margin-top: 13px;
   margin-bottom: 13px;
@@ -23,4 +22,12 @@
 
 .panel {
   overflow: auto;
+}
+.verticalBarButton{
+  margin-top: 2px;
+}
+.barButton{
+  position: absolute;
+  top: 0px;
+  left: -22px;
 }
