--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/index.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/index.css
@@ -10,3 +10,4 @@
 @import './flatpickr/flatpickr.css';
 @import './flatpickr/flatpickr-airbnb-theme.css';
 @import './flatpickr/additional.css';
+@import './react-panels/index.css';
