--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/TimebarWrapper.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/TimebarWrapper.css
@@ -17,3 +17,11 @@
   float: left;
   width: 75%;
 }
+.verticalBarButton{
+  margin-top: 2px;
+}
+.barButton{
+  position: absolute;
+  top: -23px;
+  left: 0px;
+}
