--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Window/Window.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Window/Window.css
@@ -47,3 +47,22 @@
   top: 0px;
   left: -22px;
 }
+.barButtonExplorer{
+  margin-top: 2px;
+  position: absolute;
+  top: 0px;
+  left: -22px;
+}
+.explorerCnotainer {
+  width: 100%;
+  height: 100%;
+  background: #FFF;
+  border-left: 1px solid #aaa;
+  padding: 0 5px;
+}
+.editorContainer{
+  width: 100%;
+  height: 100%;
+  background: #FFF;
+  padding-top: 5px;
+}
