[FT:#5828] It's possible to select multiple lines in PlotView legend.

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/PlotView.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/PlotView.css
@@ -53,6 +53,9 @@
   border: 1px solid #BBB;
   margin-right: 4px;
   margin-bottom: 4px;
+  &:hover{
+    background: #2a2a2a;
+  }
 }
 .legend{
   border: 1px solid #BBB;
