--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Editor/Editor.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Editor/Editor.css
@@ -1,6 +1,7 @@
 @import '../style/variables';
 
 .editor {
+  padding: 3px;
   :global {
     .panel-group{
       margin-bottom: 0;
@@ -32,12 +33,4 @@
 }
 .invalidConfiguration{
   font-size: 1.2em;
-}
-.verticalBarButton{
-  margin-top: 2px;
-}
-.barButton{
-  position: absolute;
-  top: 0px;
-  right: -23px;
 }
