--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Window/Window.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Window/Window.css
@@ -34,18 +34,15 @@
 .horizontalBarButton{
   transform: translateY(3px);
 }
-.verticalBarButton{
-  margin-top: 2px;
-}
-.barButton{
-  position: absolute;
-  top: 0px;
-  right: -23px;
-}
 .barButtonLeft{
   position: absolute;
-  top: 0px;
-  left: -22px;
+  top: 3px;
+  left: 2px;
+}
+.barButtonRight{
+  position: absolute;
+  top: 3px;
+  right: 1px;
 }
 .barButtonExplorer{
   margin-top: 2px;
@@ -57,12 +54,39 @@
   width: 100%;
   height: 100%;
   background: #FFF;
-  border-left: 1px solid #aaa;
-  padding: 0 5px;
+  display: table;
 }
 .editorContainer{
   width: 100%;
   height: 100%;
   background: #FFF;
-  padding-top: 5px;
+  display: table;
+  border: none;
+}
+.editorContainerCollapsed{
+  width: 24px;
+  height: 100%;
+  background: #888;
+  display: table;
+}
+.verticalBar{
+  width: 24px;
+  height: 100%;
+  top: 0;
+  background: #888;
+  display: table-cell;
+}
+.verticalBarRight{
+  width: 24px;
+  height: 100%;
+  background: #888;
+  display: table-cell;
+}
+.verticalBarButton{
+  margin-top: 2px;
+}
+.barButton{
+  position: absolute;
+  top: -24px;
+  right: 2px;
 }
