--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Editor/Editor.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Editor/Editor.css
@@ -2,6 +2,9 @@
 
 .editor {
   padding: 3px;
+  width: calc(100% - 24px);
+  position: absolute;
+  left: 24px;
   :global {
     .panel-group{
       margin-bottom: 0;
