--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Window/Window.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Window/Window.css
@@ -50,37 +50,31 @@
   top: 0px;
   left: -22px;
 }
-.explorerContainer {
+.editorContainer, .explorerContainer{
   width: 100%;
   height: 100%;
   background: #FFF;
-  display: table;
-}
-.editorContainer{
-  width: 100%;
-  height: 100%;
-  background: #FFF;
-  display: table;
-  border: none;
 }
 .editorContainerCollapsed{
   width: 24px;
   height: 100%;
   background: #888;
-  display: table;
 }
 .verticalBar{
   width: 24px;
   height: 100%;
   top: 0;
   background: #888;
-  display: table-cell;
+  position: absolute;
+  left: 0;
 }
 .verticalBarRight{
   width: 24px;
   height: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
   background: #888;
-  display: table-cell;
 }
 .verticalBarButton{
   margin-top: 2px;
