--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/react-panels/index.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/react-panels/index.css
@@ -6,10 +6,11 @@
   z-index: 9;
 }
 .panel-button{
-  width: 21px;
-  height: 20px;
+  width: 15px;
+  height: 14px;
+  font-size: 0.7em;
   border-radius: 1px;
-  height: 20px;
+  padding: 0;
   text-align: center;
   background: #FFF;
   color: #333;
