[FT:#5828] No vertical bar when editor minimized.

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Editor/Editor.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Editor/Editor.css
@@ -2,9 +2,7 @@
 
 .editor {
   padding: 3px;
-  width: calc(100% - 24px);
-  position: absolute;
-  left: 24px;
+  width: 100%;
   :global {
     .panel-group{
       margin-bottom: 0;
