--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/react-panels/index.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/react-panels/index.css
@@ -7,7 +7,7 @@
 }
 .panel-button{
   width: 15px;
-  height: 14px;
+  height: 15px;
   font-size: 0.7em;
   border-radius: 1px;
   padding: 0;
@@ -23,4 +23,27 @@
     background: #888;
     color: #FFF;
   }
+}
+.panel-editor-button{
+  width: 20px;
+  height: 20px;
+  font-size: 1em;
+  border-radius: 1px;
+  padding: 0;
+  text-align: center;
+  background: #FFF;
+  color: #333;
+  pointer-events: all;
+  border-width: 0px;
+  &:hover{
+    background: #DDD;
+  }
+  &:active{
+    background: #888;
+    color: #FFF;
+  }
+}
+
+.panelWrapper {
+  min-width: 0px !important;
 }
