--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Window/Window.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Window/Window.css
@@ -37,12 +37,10 @@
 .barButtonLeft{
   position: absolute;
   top: 3px;
-  left: 2px;
+  right: 3px;
 }
 .barButtonRight{
-  position: absolute;
-  top: 3px;
-  right: 1px;
+  transform: translate(2px, 3px);
 }
 .barButtonExplorer{
   margin-top: 2px;
