--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Window/Window.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Window/Window.css
@@ -41,6 +41,7 @@
 }
 .barButtonRight{
   transform: translate(2px, 3px);
+  margin-bottom: 3px;
 }
 .barButtonExplorer{
   margin-top: 2px;
@@ -72,7 +73,7 @@
   position: absolute;
   right: 0;
   top: 0;
-  background: #888;
+  background: #444;
 }
 .verticalBarButton{
   margin-top: 2px;
