--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/TimebarCollapsed.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/TimebarCollapsed.css
@@ -21,3 +21,8 @@
   box-shadow: 0px 0px 6px #337ab7 inset;
   border: 1px solid #337ab7;
 }
+
+.expand{
+  font-size: 1.2em;
+  transform: translateY(4px);
+}
