--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/Header.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/Header.css
@@ -36,23 +36,20 @@
 }
 .expandButton{
   opacity: 1;
-  backgroundColor: rgb(239,239,239);
-  color: rgb(51,51,51);
+  background-color: transparent;
+  transform-origin: 50% 50%;
+  font-size: 1.1em;
+  color: #FFF;
   padding: 3px 6px;
-  marginLeft: 3px;
-  marginRight: 3px;
-  marginTop: 1px;
   height: 22px;
-  border: 1px solid rgb(180,180,180);
+  border-width: 0px;
+  &:hover, &:focus, &:active{
+    background-color: transparent;
+    color: #FFF;
+    transform: scale(1.1);
+    border-width: 0px;
+  }
 }
 .saveButton{
-  opacity: 1;
-  backgroundColor: rgb(239,239,239);
-  color: rgb(51,51,51);
-  padding: 3px 6px;
-  marginLeft: 3px;
-  marginRight: 3px;
-  marginTop: 1px;
-  height: 22px;
-  border: 1px solid rgb(180,180,180);
+  font-size: 0.8em;
 }
