[FT:#5828] Handle the case where there is no pageId in window, not rendering panels.

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Window/Window.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Window/Window.css
@@ -90,3 +90,12 @@
   text-transform: uppercase;
   color: rgba(0, 0, 0, .1);
 }
+
+.noPage {
+  text-align: center;
+  font-size: 5rem;
+  font-weight: bolder;
+  text-transform: uppercase;
+  color: rgba(0, 0, 0, .1);
+  text-align: center;
+}
