[FT:#5828] General Editor Refacto : using GenericModal, using rc-collapse module instead of bootstrap accordion.

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/index.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/index.css
@@ -10,3 +10,4 @@
 @import 'flatpickr/dist/flatpickr.css';
 @import 'flatpickr/dist/themes/material_green.css';
 @import './react-panels/index.css';
+@import './rc-collapse/index.css';
