[FT:#5828] Collapsed view : SAVE here when isModified: true, bolds in editor, eslint-disable with reason, colors for bgcolor are full colors.

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/rc-collapse/index.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/rc-collapse/index.css
@@ -3,8 +3,11 @@
 .rc-collapse-header{
   position: relative;
 }
-.rc-collapse-content{
-  padding: 0px 8px;
+.rc-collapse-content-active{
+  padding: 4px 8px;
+}
+.rc-collapse-content-active:not(.rc-collapse-anim){
+  overflow: inherit;
 }
 .rc-collapse-header-inner{
   display: table;
