--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/RightTab.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/RightTab.css
@@ -1,3 +1,5 @@
+@import '../style/variables.css';
+
 .rightTab{
   border-width: 1px;
   border-style: solid;
@@ -11,3 +13,9 @@
   transform: translate(-50%, 30%);
   color: #222;
 }
+
+.play{ border-color: var(--borderPlay); }
+.pause{ border-color: var(--borderPause); }
+.realtime{ border-color: var(--borderRealtime); }
+.acc{ border-color: var(--borderAcc); }
+.desc{ border-color: var(--borderDesc); }
