[FT:#5828] User can now show/hide/remove EP from Plot in legend.

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/variables.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/variables.css
@@ -24,6 +24,8 @@
   --borderRealtime: lightgreen;
   --borderAcc: yellow;
   --borderDesc: lightblue;
+
+  --controlBlue: #60a7e5;
 }
 .collapsed {
   .react-resizable-handle{
