--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/buttons.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/buttons.css
@@ -27,7 +27,7 @@
     outline: 0 !important;
   }
   &:active{
-    background: #60a7e5;
+    background: var(--controlBlue);
     box-shadow: 0px 0px 6px #337ab7 inset;
     border: 1px solid #337ab7;
   }
