--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Page/Content.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Page/Content.css
@@ -13,4 +13,9 @@
   .react-resizable-handle{
     z-index: 10;
   }
+  .collapsed-grid-layout {
+    .react-resizable-handle {
+      display: none;
+    }
+  }
 }
