--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/Grizzly/GrizzlyChart.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/Grizzly/GrizzlyChart.css
@@ -48,6 +48,18 @@
     padding-top: 4px;
     box-shadow: 0px 0px 7px rgba(0,0,0,0.2);
     &:hover{
+      z-index: 7;
+    }
+  }
+  .yAxisPointLabel{
+    position: absolute;
+    border-radius: 1px;
+    z-index: 3;
+    text-shadow: 0px 0px 1px #888;
+    padding: 2px;
+    padding-top: 4px;
+    box-shadow: 0px 0px 7px rgba(0,0,0,0.2);
+    &:hover{
       z-index: 6;
     }
   }
@@ -55,6 +67,18 @@
 .xAxis{
   position: absolute;
   overflow: visible !important;
+  .xAxisPointLabel{
+    position: absolute;
+    border-radius: 1px;
+    z-index: 3;
+    text-shadow: 0px 0px 1px #888;
+    padding: 2px;
+    padding-top: 4px;
+    box-shadow: 0px 0px 7px rgba(0,0,0,0.2);
+    &:hover{
+      z-index: 6;
+    }
+  }
 }
 .xAxisGroup{
   line {
