[FT:#6661] Add animation to messages removing

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/common/Message.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/common/Message.css
@@ -1,3 +1,5 @@
-.removing{
-  filter: brightness(0.95);
+.removing {
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform 400ms ease;
 }
