[FT:#6661] Automatically remove messages after a while
- add uuids in state.messages

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/common/Message.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/common/Message.css
@@ -1,5 +1,4 @@
 .removing {
-  transform-origin: right;
-  transform: scaleX(0);
-  transition: transform 400ms ease;
+  opacity: 0;
+  transition: opacity 3000ms ease;
 }
