--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/Grizzly/GrizzlyChart.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/Grizzly/GrizzlyChart.css
@@ -218,13 +218,19 @@
     position: absolute;
     height: 100%;
     /*pointer-events: none;*/
+    cursor: row-resize;
     box-shadow: inset 0px 0px 1px rgba(0, 140, 220, 0.3), inset 0px 0px 2px rgba(0, 140, 220, 0.3), inset 0px 0px 3px rgba(0, 140, 220, 0.3);
     background: rgba(0, 140, 220, 0.03);
-    cursor: row-resize;
     &:hover{
       box-shadow: inset 0px 0px 1px rgba(0, 140, 220, 0.6), inset 0px 0px 2px rgba(0, 140, 220, 0.6), inset 0px 0px 3px rgba(0, 140, 220, 0.6);
       background: rgba(0, 140, 220, 0.11);
     }
+  }
+  & > .ZonesAxisLog{
+    position: absolute;
+    height: 100%;
+    /*pointer-events: none;*/
+    cursor: row-resize;
   }
   & > .ZonesChart{
     position: absolute;
