[FT:#6829] PlotView legend : left right top bottom.

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/Legend.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/Legend.css
@@ -18,24 +18,53 @@
     color: #a94442;
 }
 
-.plotLegend{
-  .plotLegendLegends{
-    max-height: 75px;
-    overflow-y: auto;
-    max-width: 700px;
-    margin: 0;
-    display: block;
-    button{
-      p{
-        font-size: 0.8em;
-      }
+.plotLegendHorizontal{
+  display: block;
+}
+.plotLegendVertical{
+  display: table-cell;
+  overflow-y: auto;
+}
+.plotLegendLegendsHorizontal{
+  height: 60px;
+  width: 100%;
+  overflow-y: auto;
+  margin: 0;
+  display: block;
+  button{
+    p{
+      font-size: 0.8em;
     }
-    span{
-      display: inline-block;
-      font-size: 0.9em;
+  }
+  span{
+    display: inline-block;
+    font-size: 0.9em;
+  }
+  .legend{
+    height: 23px;
+    .plotLegendName {
+      padding-left: 4px;
     }
   }
 }
+.plotLegendLegendsVertical{
+  width: 150px;
+  margin: 0;
+  display: block;
+  button{
+    p{
+      font-size: 0.8em;
+    }
+  }
+  span{
+    display: inline-block;
+    font-size: 0.9em;
+  }
+  .legend{
+    height: 36px;
+  }
+}
+
 .plotLegendColor{
   width: 15px;
   height: 15px;
@@ -46,8 +75,11 @@
   font-weight: bold;
 }
 .legend{
-  border: 1px solid #DDD;
+  border-width: 1px;
+  border-style: solid;
   border-radius: 2px;
+  display: inline-block;
+  overflow: auto;
   margin-right: 4px;
   margin-bottom: 4px;
   display: inline-block;
