[FT:#6829] Grizzly Parametric, second draft, X axes top/bottom, Y axes right/left. 1.1

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/GrizzlyParametric/GrizzlyChart.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/GrizzlyParametric/GrizzlyChart.css
@@ -26,6 +26,31 @@
       }
     }
   }
+  .xAxisLabel{
+    border-radius: 2px;
+    padding: 2px 6px;
+    &.labelUnderline{
+      text-decoration: underline;
+    }
+    &.labelBold{
+      font-weight: bold;;
+    }
+    &.labelItalic{
+      font-style: italic;
+    }
+  }
+  .xAxisLineLabel{
+    position: absolute;
+    border-radius: 1px;
+    z-index: 3;
+    text-shadow: 0px 0px 1px #888;
+    padding: 2px;
+    padding-top: 4px;
+    box-shadow: 0px 0px 7px rgba(0,0,0,0.2);
+    &:hover{
+      z-index: 7;
+    }
+  }
 }
 .yAxisDiv{
   position: absolute;
