--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/DynamicView/Components/View/DynamicView.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/DynamicView/Components/View/DynamicView.css
@@ -59,3 +59,17 @@
   padding: 2px;
   white-space: nowrap;
 }
+
+.errorContent {
+  padding: 1em;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.renderErrorText {
+  margin: auto;
+  font-size: 3em;
+  color: #CCC;
+  text-align: center;
+  font-weight: 600;
+}
