--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/react-panels/index.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/react-panels/index.css
@@ -1,6 +1,9 @@
+@import '../variables.css';
+
 .panelWrapper{
   overflow: visible !important;
   z-index: 10;
+  background: var(--gray-lighter);
 }
 .divider{
   z-index: 9;
