--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/Grizzly/GrizzlyChart.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/Grizzly/GrizzlyChart.css
@@ -13,6 +13,7 @@
   }
   .canvas{
     position: absolute;
+    background: #333;
   }
 }
 
@@ -219,11 +220,11 @@
     height: 100%;
     /*pointer-events: none;*/
     cursor: row-resize;
-    box-shadow: inset 0px 0px 1px rgba(0, 140, 220, 0.3), inset 0px 0px 2px rgba(0, 140, 220, 0.3), inset 0px 0px 3px rgba(0, 140, 220, 0.3);
-    background: rgba(0, 140, 220, 0.03);
+    box-shadow: inset 0px 0px 1px rgba(0, 140, 220, 0.5), inset 0px 0px 2px rgba(0, 140, 220, 0.5), inset 0px 0px 3px rgba(0, 140, 220, 0.5);
+    background: rgba(0, 140, 220, 0.1);
     &:hover{
       box-shadow: inset 0px 0px 1px rgba(0, 140, 220, 0.6), inset 0px 0px 2px rgba(0, 140, 220, 0.6), inset 0px 0px 3px rgba(0, 140, 220, 0.6);
-      background: rgba(0, 140, 220, 0.11);
+      background: rgba(0, 140, 220, 0.3);
     }
   }
   & > .ZonesAxisLog{
@@ -236,11 +237,11 @@
     position: absolute;
     height: 100%;
     box-shadow: inset 0px 0px 1px rgba(0, 220, 140, 0.3), inset 0px 0px 2px rgba(0, 220, 140, 0.3), inset 0px 0px 3px rgba(0, 220, 140, 0.3);
-    background: rgba(0, 220, 140, 0.03);
+    background: rgba(0, 220, 140, 0.1);
     cursor: col-resize;
     &:hover{
       box-shadow: inset 0px 0px 1px rgba(0, 220, 140, 0.6), inset 0px 0px 2px rgba(0, 220, 140, 0.6), inset 0px 0px 3px rgba(0, 220, 140, 0.6);
-      background: rgba(0, 220, 140, 0.11);
+      background: rgba(0, 220, 140, 0.3);
     }
   }
 }
