--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/RightTab.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/Timebar/RightTab.css
@@ -11,7 +11,8 @@
   position: absolute;
   left: 50%;
   transform: translate(-50%, 30%);
-  color: #222;
+  padding: 2px;
+  border-radius: 1px;
 }
 
 .play{ border-color: var(--borderPlay); }
