--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/index.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/index.css
@@ -3,6 +3,10 @@
 @import './global.css';
 @import './buttons.css';
 @import './components.css';
+@import './PlotView.css';
+@import './Nav.css';
+@import './Timebar.css';
+@import './Editor.css';
 
 @import 'react-json-inspector/json-inspector.css';
 @import 'react-grid-layout/css/styles.css';
