--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/PlotView.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/PlotView.css
@@ -1,7 +1,7 @@
 @import './variables.css';
 
 .PlotView{
-  background-color: var(--gray);
+  background-color: var(--theme-dark);
 }
 .PlotView .tick text {
   fill: #FFF;
