--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/react-panels/index.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/react-panels/index.css
@@ -3,7 +3,7 @@
 .panelWrapper{
   overflow: visible !important;
   z-index: 10;
-  background: var(--gray-lighter);
+  background: var(--theme-light);
 }
 .divider{
   z-index: 9;
