--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/buttons.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/buttons.css
@@ -8,17 +8,12 @@
 }
 .btn-control{
   color: #fff;
-  background-color: #113;
+  background-color: var(--controlBlue);
   border: 1px solid #555;
   outline: 0;
   text-align: center;
   &:hover {
-    background-color: #115;
-    color: #fff;
-    outline: 0 !important;
-  }
-  &:active{
-    background-color: #44a;
+    background-color: var(--controlBlueHover);
     color: #fff;
     outline: 0 !important;
   }
@@ -27,9 +22,16 @@
     outline: 0 !important;
   }
   &:active{
-    background: var(--controlBlue);
+    background-color: var(--controlBlueActive);
+    color: #fff;
+    outline: 0 !important;
     box-shadow: 0px 0px 6px #337ab7 inset;
     border: 1px solid #337ab7;
+  }
+  &.active, &.active:hover {
+    background: var(--controlBlueActive);
+    box-shadow: 0px 0px 6px var(--controlBlueActiveInnerShadow) inset;
+    border: 1px solid var(--controlBlueActiveInnerShadow);
   }
 }
 .btn-close{
@@ -44,7 +46,7 @@
   background: transparent;
   border: none;
   min-width: 20px;
-  color: #000;
+  color: var(--leftTabButtonColor);
   &:hover{
     background: transparent;
   }
