[FT:#7256] Re defined bootstrap color variables primary, info, success.

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/bootstrap/variables.less
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/bootstrap/variables.less
@@ -7,7 +7,6 @@
 //== Grid system
 @grid-gutter-width: 10px;
 
-
 //== Navs
 @nav-link-padding: 5px 10px;
 
@@ -24,3 +23,8 @@
 //== Typography
 @font-size-base: 12px;
 @line-height-base: 1.05;
+
+//== THEMING
+@brand-primary: #185080;
+@brand-info: #21a0d5;
+@brand-success: #3ca83c;
