--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/Editor.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/Editor.css
@@ -1,7 +1,7 @@
 @import './variables.css';
 
 .Editor {
-  background-color: var(--gray-lighter);
+  background-color: var(--theme-light-2);
   .nav-tabs {
     li, li > a {
       border-width: 0px;
@@ -11,7 +11,7 @@
       /*background-color: var(--gray-light) !important;*/
     }
     li:not(.active) {
-      background-color: var(--gray);
+      background-color: var(--theme-main);
       & > a {
         color: #FFF;
       }
