--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/rc-collapse/index.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/rc-collapse/index.css
@@ -1,7 +1,10 @@
 @import '../../../../node_modules/rc-collapse/assets/index.css';
+@import '../variables.css';
 
 .rc-collapse-header{
   position: relative;
+  background-color: var(--theme-light);
+  color: var(--navTabActiveText) !important;
 }
 .rc-collapse-content-active{
   padding: 4px 8px;
