--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/index.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/index.css
@@ -13,6 +13,7 @@
 @import './react-panels/index.css';
 @import './rc-collapse/index.css';
 @import './react-grid-layout/index.css';
+@import './redux-form/index.css';
 
 @font-face {
     font-family: 'Digital';
