--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/Nav.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/Nav.css
@@ -15,7 +15,7 @@
     background-color: var(--theme-dark);
     color: var(--navTabText);
     &:hover {
-      background-color: #111;
+      background-color: var(--theme-dark-2);
     }
   }
   .DragMe {
