--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/rc-collapse/index.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/rc-collapse/index.css
@@ -6,6 +6,10 @@
   background-color: var(--theme-light);
   color: var(--navTabActiveText) !important;
 }
+.rc-collapse-header[aria-expanded="true"] {
+  background-color: var(--theme-main);
+  color: var(--navTabText) !important;
+}
 .rc-collapse-content-active{
   padding: 4px 8px;
 }
