[FT:#6830] Few changes to Grizzly/Chart to display a background-dedicated div.

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/PlotView.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/PlotView.css
@@ -1,11 +1,14 @@
 @import './variables.css';
 
 .PlotView{
-  background-color: #EAEAEA;
+  background-color: #666;
+}
+.PlotView .Background {
+  background-color: #444;
 }
 .PlotView .tick text {
-  fill: #222;
+  fill: #FFF;
 }
 .PlotView .tick line {
-  stroke: #222;
+  stroke: #FFF;
 }
