[FT:#7256] Legend PlotView colors are editable in styles/PlotView.css

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/PlotView.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/PlotView.css
@@ -12,3 +12,9 @@
 .PlotView .tick line {
   stroke: #FFF;
 }
+.PlotView .LegendAxisName {
+  color: #FFF;
+}
+.PlotView .LegendItem {
+  background: #FFF;
+}
