--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/codeEditorProcess/Source.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/codeEditorProcess/Source.css
@@ -32,7 +32,8 @@
   display: flex;
   flex-direction: column;
   flex: 1 1 100%;
-  position: relative;
+  position: fixed;
+  bottom: 0;
 
   :global {
     .CodeMirrorField {
