[FT:#6069] Simplyfied new themes edition: dark/light/green .

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/PlotView.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/PlotView.css
@@ -1,20 +1,20 @@
 @import './variables.css';
 
 .PlotView{
-  background-color: #666;
+  background-color: var(--plotBg);
 }
 .PlotView .Background {
-  background-color: #444;
+  background-color: var(--grizzlyBg);
 }
 .PlotView .tick text {
-  fill: #FFF;
+  fill: var(--plotTextAndTicksColor);
 }
 .PlotView .tick line {
-  stroke: #FFF;
+  stroke: var(--plotTextAndTicksColor);
 }
 .PlotView .LegendAxisName {
-  color: #FFF;
+  color: var(--plotTextAndTicksColor);
 }
 .PlotView .LegendItem {
-  background: #FFF;
+  background: var(--plotTextAndTicksColor);
 }
