--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/rc-collapse/index.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/rc-collapse/index.css
@@ -1,6 +1,13 @@
 @import '../../../../node_modules/rc-collapse/assets/index.css';
 @import '../variables.css';
 
+.rc-collapse {
+  border-color: var(--editorBorderColor);
+}
+.rc-collapse > .rc-collapse-item {
+  border-color: var(--editorBorderColor);
+}
+
 .rc-collapse-header{
   position: relative;
   background-color: var(--theme-light);
