--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/variables.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/variables.css
@@ -1,3 +1,13 @@
+
+/* ================== */
+/* === VIMA THEME === */
+/* === PICK ONE === */
+/* ================== */
+/* @import './themes/dark.css'; */
+/* @import './themes/green.css'; */
+@import './themes/light.css';
+
+
 :root{
   /* Bootstrap variables */
   --brand-primary: #337ab7;
@@ -37,29 +47,8 @@
 
   --leftTabButtonColor: #FFF;
 
-  /*
-  --navTabText: #FFF;
-
-  --theme-light-2: #EEE;
-  --theme-light: #CCC;
-  --theme-main: #777;
-  --theme-dark: #555;
-  --theme-dark-2: #444;
-  */
-
   --leftTabButtonColor: #000;
 
-  --navTabText: #000;
-  --navTabActiveText: #000;
-
-  --theme-light-2: #FFF;
-  --theme-light: #EEE;
-  --theme-main: #DDD;
-  --theme-dark: #AAA;
-  --theme-dark-2: #999;
-
-  --plotViewBg: #FAFAFA;
-  --grizzlyBg: #E0E0E0;
 }
 .collapsed {
   .react-resizable-handle{
