[FT:#6069] Fixes to the light theme/ plotView colors.

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/themes/light.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/themes/light.css
@@ -14,9 +14,9 @@
   --timelinesBg: #DDD;
   --scaleBg: #DDD;
 
-  --plotBg: #BBB;
-  --grizzlyBg: #b0b0b0;
-  --plotTextAndTicksColor: #111;
+  --plotBg: #999;
+  --grizzlyBg: #777;
+  --plotTextAndTicksColor: #FFF;
 
   --editorBorderColor: #555;
 }
