[FT:#6127] View component now do not automatically set overflow to auto
Each View need to set his overflow if needed

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/View.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/View/View.css
@@ -1,9 +1,9 @@
 .container {
   position: relative;
-  overflow: visible;;
+  overflow: hidden;
 }
 .content {
   height: calc(100% - 28px);
   width: 100%;
-  overflow: auto;
+  /*overflow: auto;*/
 }
