--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/HistoryView/Components/View/HistoryView.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/HistoryView/Components/View/HistoryView.css
@@ -13,6 +13,7 @@
   overflow-x: auto;
   border-collapse: collapse;
   table-layout: fixed;
+  top: -100px;
 }
 
 .thead .th {
@@ -27,10 +28,10 @@
 }
 
 .td {
-  height: 33px;
   overflow: hidden;
   text-overflow: ellipsis;
   text-align: center;
   white-space: nowrap;
-  max-width: 320px;
+  min-width: 220px;
+  max-width: 220px;
 }
