--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/Timebar.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/Timebar.css
@@ -15,8 +15,7 @@
     background-color: var(--rightTabBg);
   }
   .FormatedFullDate {
-    background: rgba(0, 0, 0, 0.4);
-    color: #FFF;
+    color: #111;
   }
   .Timelines {
     background-color: var(--timelinesBg);
