[FT:#7776] Fix plot drawing when timeline has offset

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/Grizzly/GrizzlyChart.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/Grizzly/GrizzlyChart.css
@@ -155,6 +155,7 @@
     }
     .tooltipLine{
       position: relative;
+      height: 35px;
       & > p{
         font-size: 1.0em;
         position: absolute;
