--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/GrizzlyParametric/GrizzlyChart.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/GrizzlyParametric/GrizzlyChart.css
@@ -193,6 +193,10 @@
     min-height: 90px;
     border: 1px solid #ccc;
     background: rgba(255, 255, 255, 0.90);
+    transition: background ease-out 0.2s;
+    &:hover {
+      background: rgba(255, 255, 255, 0.10);
+    }
     border-radius: 2px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
     padding: 6px;
@@ -291,5 +295,28 @@
       box-shadow: inset 0px 0px 1px rgba(0, 220, 140, 0.6), inset 0px 0px 2px rgba(0, 220, 140, 0.6), inset 0px 0px 3px rgba(0, 220, 140, 0.6);
       background: rgba(0, 220, 140, 0.11);
     }
+  }
+  & > .ZonesChartLasso {
+    position: absolute;
+    height: 100%;
+    box-shadow: inset 0px 0px 1px rgba(0, 220, 140, 0.3), inset 0px 0px 2px rgba(0, 220, 140, 0.3), inset 0px 0px 3px rgba(0, 220, 140, 0.3);
+    background: rgba(244, 66, 182, 0.1);
+    cursor: crosshair;
+    &:hover{
+      box-shadow: inset 0px 0px 1px rgba(0, 220, 140, 0.6), inset 0px 0px 2px rgba(0, 220, 140, 0.6), inset 0px 0px 3px rgba(0, 220, 140, 0.6);
+      background: rgba(244, 66, 182, 0.3);
+    }
+  }
+  .ZonesChartLassoRectangleDiv {
+    position: relative;
+    cursor: crosshair;
+    width: 100%;
+    height: 100%;
+  }
+  .ZonesChartLassoRectangle {
+    cursor: crosshair;
+    position: absolute;
+    background: rgba(244, 66, 182, 0.5);
+    border: 1px solid rgba(244, 66, 182, 1);
   }
 }
