[FT:#7755] By default, axis labels are font-weight: normal.

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/GrizzlyParametric/GrizzlyChart.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/GrizzlyParametric/GrizzlyChart.css
@@ -33,11 +33,12 @@
   .xAxisLabel{
     border-radius: 2px;
     padding: 2px 6px;
+    font-weight: normal;
     &.labelUnderline{
       text-decoration: underline;
     }
     &.labelBold{
-      font-weight: bold;;
+      font-weight: bold;
     }
     &.labelItalic{
       font-style: italic;
