[FT:#7756] Fixed error when using lasso and Y Axis on right.

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/Grizzly/GrizzlyChart.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/Grizzly/GrizzlyChart.css
@@ -261,7 +261,7 @@
     }
   }
   .ZonesChartLassoRectangleDiv {
-    position: relative;
+    position: absolute;
     cursor: crosshair;
   }
   .ZonesChartLassoRectangle {
