--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/GrizzlyParametric/GrizzlyChart.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/GrizzlyParametric/GrizzlyChart.css
@@ -309,7 +309,7 @@
     }
   }
   .ZonesChartLassoRectangleDiv {
-    position: relative;
+    position: absolute;
     cursor: crosshair;
     width: 100%;
     height: 100%;
