[FT:#6127] Add read only scrollbar in HistoryView

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/HistoryView/Components/View/HistoryView.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/HistoryView/Components/View/HistoryView.css
@@ -37,3 +37,11 @@
     max-width: 220px;
   }
 }
+
+.scrollbar {
+   background-color: grey;
+   position: absolute;
+   height: 20px;
+   width: 10px;
+   right: 0px;
+}
