--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/index.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/index.css
@@ -4,6 +4,7 @@
 @import './buttons.css';
 @import './components.css';
 @import './PlotView.css';
+@import './HistoryView';
 @import './Nav.css';
 @import './Timebar.css';
 @import './Editor.css';
