[FT:#5806] Add basic GroundAlarmView (HistoryView fork)

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/index.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/index.css
@@ -5,6 +5,7 @@
 @import './components.css';
 @import './PlotView.css';
 @import './HistoryView';
+@import './GroundAlarmView';
 @import './Nav.css';
 @import './Timebar.css';
 @import './Editor.css';
