--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/GroundAlarmView.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/GroundAlarmView.css
@@ -5,5 +5,27 @@
 }
 
 .GroundAlarmView th {
-  background-color: var(--theme-main);
+  background-color: #666;
+  color: var(--theme-light);
+}
+
+.GroundAlarmView .alarm td {
+  background-color: #777;
+  color: var(--theme-light);
+}
+
+.GroundAlarmView .transition th {
+  border-color: #777777;
+  background-color: #999999;
+  border-left: 0;
+  border-right: 0;
+  border-bottom: 0;
+  color: var(--gray-darker);
+}
+
+.GroundAlarmView .transition td {
+  border-right: none;
+  border-left: none;
+  background-color: var(--gray-lighter);
+  color: var(--gray-darker);
 }
