[FT:#5806] Fix getNbDisplatedElems in GroundAlarmView .

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/GroundAlarmView/Components/View/GroundAlarmTable.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/GroundAlarmView/Components/View/GroundAlarmTable.css
@@ -2,10 +2,6 @@
   overflow-x: auto;
   overflow-y: hidden;
 
-  /*th {
-    background: lightgrey;
-  }*/
-
   .prevCurrent td, .prevCurrent th {
     border-bottom: none;
   }
@@ -15,18 +11,16 @@
   }
 
   table {
-    border-collapse: collapse;;
+    border-collapse: collapse;
   }
 
   table, th, td {
-    /*border-left: 1px solid black;*/
-    /*border-bottom: 1px solid black;*/
     border: 1px solid black;
     text-align: center;
   }
 
   th, td {
-    padding: 10px;
+    padding: 3px;
   }
 
   td {
