--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/GroundAlarmView.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/GroundAlarmView.css
@@ -14,6 +14,14 @@
   color: var(--theme-light);
 }
 
+.GroundAlarmView .alarm.selected td {
+  background-color: #63708C;
+}
+.GroundAlarmView .transition.selected td {
+  background-color: #63708C;
+  color: var(--theme-light);
+}
+
 .GroundAlarmView .transition th {
   border-color: #777777;
   background-color: #999999;
@@ -23,9 +31,12 @@
   color: var(--gray-darker);
 }
 
+.GroundAlarmView .transition.selected th {
+  background-color: #63708C;
+}
+
 .GroundAlarmView .transition td {
-  border-right: none;
-  border-left: none;
+  border: 0;
   background-color: var(--gray-lighter);
   color: var(--gray-darker);
 }
