--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/Legend.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/Legend.css
@@ -12,7 +12,7 @@
     cursor: pointer;
 }
 .showEyeSelected{
-    color: var(--controlBlue);
+    color: #60a7e5;;
 }
 .hideEyeSelected{
     color: #a94442;
